syntax = "proto3";// 协议为proto3

package proto;

//是否输出多个文件
option java_multiple_files = false;
//自定义package
option java_package = "com.example.grpc.stream";
//输出类名
option java_outer_classname = "ServerStreamProto";
//类前缀
option objc_class_prefix = "RTG";

// 定义发送请求信息
message SimpleRequest{
  // 定义发送的参数，采用驼峰命名方式，小写加下划线，如：student_name
  // 请求参数
  string data = 1;
}

// 定义响应信息
message SimpleResponse{
  // 定义接收的参数
  // 参数类型 参数名 标识号(不可重复)
  int32 code = 1;
  string value = 2;
}

// 定义流式响应信息
message StreamResponse{
  // 流式响应数据
  bytes stream_value = 1;
}

// 定义我们的服务（可定义多个服务,每个服务可定义多个接口）
service StreamServer{
  rpc Route (SimpleRequest) returns (SimpleResponse){};

  // 服务端流式rpc，在响应数据前添加stream
  rpc ListValue(SimpleRequest)returns(stream StreamResponse){};
}